--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,7 +3,7 @@
 ; Thu 30 Aug 2012 15:36:56 CEST 
 
 [buildout]
-parts = external python
+parts = scripts
 develop = .
 find-links = http://www.idiap.ch/software/bob/packages/xbob/nightlies/last/
 newest = false
@@ -12,14 +12,6 @@ eggs = bob
        gridtk
        ipdb
 
-[sources]
-antispoofing.motion = fs antispoofing.motion
 
-[external]
-recipe = xbob.buildout:external
-egg-directories = /idiap/group/torch5spro/nightlies/last/install/linux-x86_64-release/lib
-
-[python]
-recipe = zc.recipe.egg
-interpreter = python
-eggs = ${buildout:eggs}
+[scripts]
+recipe = xbob.buildout:scripts
